...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/view_profile_btn"
        android:layout_width="105dp"
        android:layout_height="31dp"
        android:text="View Profile"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />
...
        android:text="Search Experiments"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_profile_btn" />

    <Button
        android:id="@+id/viewExperiments_btn"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#9F76E8"
        android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
...
        android:text="Scan Barcode"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addExperiment_btn"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#4CAF50"
        android:drawableLeft="@android:drawable/ic_menu_add"
        android:drawableTint="@color/white"
...
